Update homepage URL for new repository

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://dankadouken.github.io/WNP-project1",
+  "homepage": "https://dankadouken.github.io/professional-portfolio",
+
   "name": "portfolio-site",
   "version": "0.1.0",
   "private": true,
