--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "homepage": "https://dankadouken.github.io/professional-portfolio",
-
   "name": "portfolio-site",
   "version": "0.1.0",
   "private": true,
@@ -20,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "git add build && git commit -m \"Deploy\" && git subtree push --prefix build origin gh-pages"
   },
   "eslintConfig": {
     "extends": [
@@ -44,4 +43,3 @@
     "gh-pages": "^6.1.1"
   }
 }
-
